syntax = "proto3";

package bcna.bcna;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "bcna/bcna/params.proto";
import "bcna/bcna/bitcannaid.proto";
import "bcna/bcna/supplychain.proto";

option go_package = "github.com/BitCannaGlobal/bcna/x/bcna/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/BitCannaGlobal/bcna/bcna/params";
  
  }
  
  // Queries a list of Bitcannaid items.
  rpc Bitcannaid    (QueryGetBitcannaidRequest) returns (QueryGetBitcannaidResponse) {
    option (google.api.http).get = "/BitCannaGlobal/bcna/bcna/bitcannaid/{id}";
  
  }
  rpc BitcannaidAll (QueryAllBitcannaidRequest) returns (QueryAllBitcannaidResponse) {
    option (google.api.http).get = "/BitCannaGlobal/bcna/bcna/bitcannaid";
  
  }
  
  // Queries a list of Supplychain items.
  rpc Supplychain    (QueryGetSupplychainRequest) returns (QueryGetSupplychainResponse) {
    option (google.api.http).get = "/BitCannaGlobal/bcna/bcna/supplychain/{id}";
  
  }
  rpc SupplychainAll (QueryAllSupplychainRequest) returns (QueryAllSupplychainResponse) {
    option (google.api.http).get = "/BitCannaGlobal/bcna/bcna/supplychain";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetBitcannaidRequest {
  uint64 id = 1;
}

message QueryGetBitcannaidResponse {
  Bitcannaid Bitcannaid = 1 [(gogoproto.nullable) = false];
}

message QueryAllBitcannaidRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllBitcannaidResponse {
  repeated Bitcannaid                             Bitcannaid = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetSupplychainRequest {
  uint64 id = 1;
}

message QueryGetSupplychainResponse {
  Supplychain Supplychain = 1 [(gogoproto.nullable) = false];
}

message QueryAllSupplychainRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllSupplychainResponse {
  repeated Supplychain                            Supplychain = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination  = 2;
}

